--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-    "install": "cd server && npm i && cd ../client && npm i",
+    "install": "cd server && npm i && cd ../client && npm i && npm i vite@5.1.6 @vitejs/plugin-react --save-dev",
     "build": "cd server && npm run build && cd ../client && npm run build",
     "render-build":"npm install && npm run build"
   },
@@ -17,6 +17,7 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
-    "wait-on": "^8.0.2"
+    "wait-on": "^8.0.2",
+     "vite": "^5.1.6"
   }
 }
