--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-    "install": "cd server && npm i && cd ../client && npm i && npm i -D @vitejs/plugin-react",
-    "build": "cd server && npm run build && cd ../client && npm run build",
-    "render-build":"npm install && npm run build"
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd server && npm run build && bash build-client.sh",
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
-    "wait-on": "^8.0.2",
-     "vite": "^5.1.6"
+    "wait-on": "^8.0.2"
   }
 }
