--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd server && npm run build && bash build-client.sh",
+    "build": "cd server && npm run build && cd ../client && npm i --no-save vite@5.1.6 @vitejs/plugin-react@4.2.1 && npx vite build",
     "render-build": "npm install && npm run build"
   },
   "keywords": [],
