--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd server && npm run build && cd ../client && npm i vite@latest @vitejs/plugin-react@latest --save-dev && npx vite build",
+    "client-build": "node client-build.js",
+    "build": "cd server && npm run build && npm i vite@latest @vitejs/plugin-react@latest --save-dev && npm run client-build",
     "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "vite": "^5.1.6",
+    "@vitejs/plugin-react": "^4.2.1"
   },
   "dependencies": {
     "wait-on": "^8.0.2"
