--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server/dist/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd server && npm run build && cd ../client && NODE_ENV=production npm i -g vite@latest && vite build --emptyOutDir",
+    "build": "cd server && npm run build && cd ../client && NODE_ENV=production npm run build",
     "render-build": "npm install && npm run build"
   },
   "keywords": [],
